--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@google/generative-ai": "^0.24.1",
     "@splinetool/react-spline": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.4.2",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
     "pdfjs-dist": "^5.4.149",
     "react": "^18.3.1",
