feat: Add major features - Algo Builder with real market data, Risk Assessment, and SEBI Content Aggregation
- Added Algo Builder with real Indian stock data (NSE) via yfinance
- Implemented technical indicators (SMA, EMA, RSI, MACD, Bollinger Bands)
- Added comprehensive Risk Assessment module with quantitative calculations
- Integrated SEBI/NISM content aggregation with 8-language support
- Enhanced backend with algo_backtest, risk_assessment, content_aggregator modules
- Added new pages: AlgoBuilder, RiskAssessment, OfficialResources
- Updated documentation with guides for new features
- All features tested and working with real data (not mock/random)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.11.2",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "i18next": "^25.4.2",
@@ -21,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.7.3",
+    "react-is": "^19.2.0",
     "react-parallax-tilt": "^1.7.307",
     "react-router-dom": "^7.8.2",
     "react-youtube": "^10.1.0",
