--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Dependencies
+node_modules/
+package-lock.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+*.egg-info/
+dist/
+build/
+
 # Logs
 logs
 *.log
@@ -7,7 +24,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Build outputs
 dist
 dist-ssr
 *.local
@@ -22,3 +39,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.swp
+*.swo
+*~
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary files
+tmp/
+temp/
+/tmp/
+*.tmp
+*.bak
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Flask
+instance/
+.webassets-cache
+
+# OS specific
+Thumbs.db
